--- a/views/login.jade
+++ b/views/login.jade
@@ -13,4 +13,7 @@ block content
 					input.form-control(type="password" name="password")
 				.form-group
 					button.btn-black(type="submit") Вход
+					
+			if error
+				pre= error
 
