--- a/views/reg.jade
+++ b/views/reg.jade
@@ -13,4 +13,7 @@ block content
 					input.form-control(type="password" name="password")
 				.form-group
 					button.btn-black(type="submit") Регистрация
+					
+			if error
+				pre= error
 
