--- a/views/login.jade
+++ b/views/login.jade
@@ -2,8 +2,15 @@ extends layout
 
 block content
 
-	.content
-		.col-md-4.col-md-offset-4
+	.d-flex.flex-column.align-items-center
+		.col-md-4
+			.nav.d-flex.justify-content-center
+				.nav-item
+					a.nav-link.text-secondary(href="/reg") Sign Up
+				.nav-item
+					a.nav-link.text-secondary(href="/login") Login
+
+		.col-md-4
 			h1 Login
 			hr
 			form(method="POST" action="/login")
@@ -12,8 +19,8 @@ block content
 				.form-group
 					input.form-control(type="password" name="password")
 				.form-group
-					button.btn-black(type="submit") Send
-					
+					button.btn.btn-dark(type="submit") Send
+
 			if error
 				pre= error
 
