Added validators to forms and "remove" action for playerQueueReducer

--- a/public/stylesheets/album.scss
+++ b/public/stylesheets/album.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 .album-screen {
 
 }
@@ -23,12 +25,36 @@
   padding: 0 50px;
 
   .album-music-item {
-    width: 400px;
-    padding: 10px;
+    padding: 15px;
+    min-width: 500px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid #eee;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #efefef;
+    }
 
     .equalizer-icon {
       width: 30px;
       margin: 0 10px;
+    }
+
+    .title {
+      padding: 0 15px;
+    }
+
+    .play {
+      @include circle-black-button(30px, 10px);
+
+      padding: 5px;
+      overflow: hidden;
+
+      img {
+        width: 80%;
+      }
     }
   }
 }
