--- a/public/stylesheets/player.scss
+++ b/public/stylesheets/player.scss
@@ -123,8 +123,14 @@
   white-space: nowrap;
 }
 
+.mit-author {
+  font-size: 16pt;
+  color: #aaa;
+}
+
 .mit-other {
   font-size: 16pt;
+  margin: 10px 0;
 }
 
 .music-player {
