--- a/public/javascripts/app/screens/LayoutScreen/style.scss
+++ b/public/javascripts/app/screens/LayoutScreen/style.scss
@@ -6,16 +6,49 @@ a:not([href]) {
   }
 }
 
-.nav-bar {
+.main-header {
+  width: 100%;
+  z-index: 100;
+  height: 90px;
+}
+
+.main-nav-bar {
   width: 100%;
   background-color: #333;
   color: #fff;
   height: 50px;
-  z-index: 100;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.sub-nav {
+  background-color: #fff;
+  height: 40px;
+  border-bottom: 1px solid #ccc;
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+    margin: 0 40px;
+    height: 100%;
+
+    li {
+      padding: 0 10px;
+      list-style-type: none;
+      color: #777;
+      font-size: 14px;
+
+      a {
+        &:hover {
+          opacity: .8;
+        }
+      }
+    }
+  }
 }
 
 .logo {
@@ -88,7 +121,7 @@ a:not([href]) {
 }
 
 .content {
-  height: calc(100vh - 120px);
+  height: calc(100vh - 160px);
   overflow-y: scroll;
 }
 
