--- a/public/javascripts/app/screens/LayoutScreen/style.scss
+++ b/public/javascripts/app/screens/LayoutScreen/style.scss
@@ -123,6 +123,11 @@ a:not([href]) {
 .content {
   height: calc(100vh - 160px);
   overflow-y: scroll;
+  padding: 30px 50px;
+
+  @media screen and (max-width: 768px) {
+    padding: 30px 10px;
+  }
 }
 
 .cont {
