--- a/public/stylesheets/album.scss
+++ b/public/stylesheets/album.scss
@@ -25,36 +25,36 @@
   padding: 0 50px;
 
   .album-music-item {
-    padding: 15px;
-    min-width: 500px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border: 1px solid #eee;
-
-    &:hover {
-      cursor: pointer;
-      background-color: #efefef;
-    }
-
-    .equalizer-icon {
-      width: 30px;
-      margin: 0 10px;
-    }
-
-    .title {
-      padding: 0 15px;
-    }
-
-    .play {
-      @include circle-black-button(30px, 10px);
-
-      padding: 5px;
-      overflow: hidden;
-
-      img {
-        width: 80%;
-      }
-    }
+    //padding: 15px;
+    //width: 100%;
+    //display: flex;
+    //flex-direction: row;
+    //align-items: center;
+    //border: 1px solid #eee;
+    //
+    //&:hover {
+    //  cursor: pointer;
+    //  background-color: #efefef;
+    //}
+    //
+    //.equalizer-icon {
+    //  width: 30px;
+    //  margin: 0 10px;
+    //}
+    //
+    //.title {
+    //  padding: 0 15px;
+    //}
+    //
+    //.play {
+    //  @include circle-black-button(30px, 10px);
+    //
+    //  padding: 5px;
+    //  overflow: hidden;
+    //
+    //  img {
+    //    width: 80%;
+    //  }
+    //}
   }
 }
