--- a/public/stylesheets/common.scss
+++ b/public/stylesheets/common.scss
@@ -49,3 +49,45 @@
     }
   }
 }
+
+.btn-black {
+  background-color: #333;
+  border-radius: 5px;
+  padding: 10px;
+  color: #fff;
+
+  .fa {
+    margin-right: 10px;
+  }
+
+  &:hover {
+    cursor: pointer;
+    opacity: .8;
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 12px;
+  }
+}
+
+.btn-white {
+  border: 1px solid #aaa;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 10px;
+  color: #333;
+
+  .fa {
+    margin-right: 10px;
+  }
+
+  &:hover {
+    cursor: pointer;
+    opacity: .8;
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 12px;
+  }
+}
+
