--- a/public/stylesheets/player.scss
+++ b/public/stylesheets/player.scss
@@ -138,29 +138,6 @@
   margin: 20px 0;
 }
 
-.btn-black {
-  transition: background-color ease .3s;
-  border-radius: 3px;
-  color: #fff;
-  background-color: #333;
-  display: inline-block;
-  padding: 10px;
-  border: none;
-
-  .fas {
-    color: #fff;
-  }
-
-  i {
-    margin-right: 5px;
-  }
-
-  &:hover {
-    background-color: #555;
-    cursor: pointer;
-  }
-}
-
 .main-player-type {
   width: 100%;
   border: 1px solid #dedede;
@@ -315,28 +292,20 @@
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
-}
 
-.global-player-queue {
-  border-radius: 10px;
-  border: 1px solid #aaa;
-  padding: 10px;
-  color: #555;
-  font-size: 12px;
+  .btn-white {
+    font-size: 12px;
+    color: #555;
 
-  .fa {
-    margin: 0 5px;
-    transition: transform ease .3s;
-  }
-
-  &:hover {
-    cursor: pointer;
-    opacity: .8;
-  }
-
-  &.active {
     .fa {
-      transform: rotate(180deg);
+      margin: 0 5px;
+      transition: transform ease .3s;
+    }
+
+    &.active {
+      .fa {
+        transform: rotate(180deg);
+      }
     }
   }
 }
