Started using redux-thunk instead of redux-saga

--- a/public/stylesheets/playlist.scss
+++ b/public/stylesheets/playlist.scss
@@ -79,6 +79,10 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+
+  p {
+    color: #aaa;
+  }
 }
 
 .list-of-playlist {
