Changed routing component

--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -43,6 +43,9 @@ a:not([href]) {
       font-size: 14px;
 
       a {
+        color: #333;
+        text-decoration: none;
+
         &:hover {
           opacity: .8;
         }
