--- a/public/stylesheets/common.scss
+++ b/public/stylesheets/common.scss
@@ -1,3 +1,10 @@
+button.fa {
+  border: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
 
 .empty-list-msg {
   width: 100%;
@@ -91,3 +98,15 @@
   }
 }
 
+.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 50px;
+    height: 50px;
+  }
+}
