--- a/public/stylesheets/player.scss
+++ b/public/stylesheets/player.scss
@@ -181,20 +181,22 @@
 
 // Global player
 
-.global-player {
-  //position: fixed;
-  //bottom: 0;
-  //left: 0;
-  width: 100vw;
-  height: 70px;
+.global-player-container {
   border-top: 1px solid #ddd;
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  background-color: #fff;
+  width: 100vw;
+  height: 70px;
+  z-index: 20;
+}
+
+.global-player {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 0 50px;
-  background-color: #fff;
-  z-index: 20;
 }
 
 .global-player-controls {
