--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <body>
         <div id="app"></div>
 
-    <script src="/dist_client/vendors.client.js"></script>
-    <script src="/dist_client/client.js"></script>
+        <!--<script src="/vendors.client.js"></script>-->
+        <script src="/client.js"></script>
     </body>
 </html>
