--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,8 @@
 
         <link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
-        <!--<link rel="stylesheet" href="/dist_client/stylesheets/style.css">-->
+        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <div id="app"></div>
